feat: SEO improvements
- Add about.html and disclosure.html to sitemap.xml
- Update lastmod dates to 2025-12-28
- Add Open Graph and Twitter Card meta tags to about.html
- Add structured data (AboutPage, BreadcrumbList) to about.html
- Add SportsEvent schema to index.html for 2026 season
- Add VideoObject/ItemList schema to archive-2025.html
- Create manifest.json for PWA support
- Add theme-color meta tag to all pages
- Add preconnect hints for YouTube and PostHog
- Improve disclosure.html with favicon, manifest, and breadcrumb schema

--- a/public/about.html
+++ b/public/about.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary Meta Tags -->
   <title>About | F1 Highlights Hub</title>
+  <meta name="title" content="About | F1 Highlights Hub">
   <meta name="description" content="Learn how F1 Highlights Hub tracks every Formula 1 session highlight, builds a 2026 calendar in your timezone, and keeps a complete 2025 archive.">
+  <meta name="keywords" content="F1 highlights, Formula 1 highlights, F1 race videos, about F1 recap">
+  <meta name="author" content="F1 Recap">
   <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://f1recap.pages.dev/about.html">
+  <meta property="og:title" content="About F1 Highlights Hub">
+  <meta property="og:description" content="Your quick way to catch every F1 session. Auto-updated highlights from the official F1 YouTube channel.">
+  <meta property="og:image" content="https://f1recap.pages.dev/assets/images/og-image.jpg">
+  <meta property="og:site_name" content="F1 Recap">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://f1recap.pages.dev/about.html">
+  <meta property="twitter:title" content="About F1 Highlights Hub">
+  <meta property="twitter:description" content="Your quick way to catch every F1 session. Auto-updated highlights from the official F1 YouTube channel.">
+  <meta property="twitter:image" content="https://f1recap.pages.dev/assets/images/og-image.jpg">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏎️</text></svg>">
+  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏎️</text></svg>">
+  
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#e10600">
+  
+  <!-- Canonical URL -->
   <link rel="canonical" href="https://f1recap.pages.dev/about.html">
+  
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="assets/styles.css">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AboutPage",
+    "name": "About F1 Highlights Hub",
+    "description": "Learn how F1 Highlights Hub tracks every Formula 1 session highlight",
+    "url": "https://f1recap.pages.dev/about.html",
+    "mainEntity": {
+      "@type": "WebSite",
+      "name": "F1 Highlights Hub",
+      "url": "https://f1recap.pages.dev/",
+      "description": "Auto-updated F1 highlights from the official Formula 1 YouTube channel"
+    },
+    "isPartOf": {
+      "@type": "WebSite",
+      "name": "F1 Highlights Hub",
+      "url": "https://f1recap.pages.dev/"
+    },
+    "inLanguage": "en-US"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://f1recap.pages.dev/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "About",
+        "item": "https://f1recap.pages.dev/about.html"
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
   <div id="site-header"></div>
