--- a/public/disclosure.html
+++ b/public/disclosure.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Primary Meta Tags -->
   <title>Disclosure | F1 Highlights Hub</title>
+  <meta name="title" content="Disclosure | F1 Highlights Hub">
   <meta name="description" content="Disclosure for F1 Highlights Hub: highlights are hosted on the official Formula 1 YouTube channel; we link to those videos and do not host content.">
   <meta name="robots" content="index, follow">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏎️</text></svg>">
+  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏎️</text></svg>">
+  
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#e10600">
+  
+  <!-- Canonical URL -->
   <link rel="canonical" href="https://f1recap.pages.dev/disclosure.html">
+  
+  <!-- Stylesheet -->
   <link rel="stylesheet" href="assets/styles.css">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://f1recap.pages.dev/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Disclosure",
+        "item": "https://f1recap.pages.dev/disclosure.html"
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
   <div id="site-header"></div>
