fix: Address SEO review feedback
- Remove non-existent icon references from manifest.json (prevents 404s)
- Remove placeholder VideoObject schema with fake URLs from archive page
- Keep valid ItemList schema for archive page structure

--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -90,27 +90,7 @@
       "description": "Video highlights from all 24 Grand Prix of the 2025 Formula 1 season",
       "url": "https://f1recap.pages.dev/archive-2025.html",
       "numberOfItems": 24,
-      "itemListOrder": "https://schema.org/ItemListOrderDescending",
-      "itemListElement": [
-        {
-          "@type": "ListItem",
-          "position": 1,
-          "item": {
-            "@type": "VideoObject",
-            "name": "2025 Abu Dhabi Grand Prix Highlights",
-            "description": "Race highlights from the 2025 Abu Dhabi Grand Prix at Yas Marina Circuit",
-            "thumbnailUrl": "https://i.ytimg.com/vi/placeholder/hqdefault.jpg",
-            "uploadDate": "2025-12-07",
-            "contentUrl": "https://www.youtube.com/watch?v=placeholder",
-            "embedUrl": "https://www.youtube.com/embed/placeholder",
-            "publisher": {
-              "@type": "Organization",
-              "name": "Formula 1",
-              "url": "https://www.youtube.com/@Formula1"
-            }
-          }
-        }
-      ]
+      "itemListOrder": "https://schema.org/ItemListOrderDescending"
     }
     </script>
 </head>
