--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -93,6 +93,9 @@
       "itemListOrder": "https://schema.org/ItemListOrderDescending"
     }
     </script>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="2nJzZJOXXbrsDZcxAWW/0w" async></script>
 </head>
 <body>
     <div id="site-header"></div>
