--- a/public/calendar-2025.html
+++ b/public/calendar-2025.html
@@ -82,6 +82,9 @@
       ]
     }
     </script>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="2nJzZJOXXbrsDZcxAWW/0w" async></script>
 </head>
 <body>
     <header>
