--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,9 @@
       }
     }
     </script>
+    
+    <!-- Ahrefs Analytics -->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="2nJzZJOXXbrsDZcxAWW/0w" async></script>
 </head>
 <body>
     <div id="site-header"></div>
