--- a/public/about.html
+++ b/public/about.html
@@ -36,7 +36,7 @@
   <meta name="theme-color" content="#e10600">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://f1recap.pages.dev/about.html">
+  <link rel="canonical" href="https://f1recap.pages.dev/about">
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="assets/styles.css">
@@ -95,7 +95,7 @@
       <div class="hero-card">
         <div class="hero-meta">
           <p class="hero-kicker">About</p>
-          <h2 class="hero-title">Your quick way to catch every F1 session</h2>
+          <h1 class="hero-title">Your quick way to catch every F1 session</h1>
           <p class="hero-date">We auto-fetch highlights from the official Formula 1 YouTube channel every 30 minutes and organize everything in your timezone.</p>
           <ul class="feature-list">
             <li>Full 2026 calendar with local times for practice, qualifying, sprint, and race.</li>
