--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -41,7 +41,7 @@
     <link rel="dns-prefetch" href="https://eu.i.posthog.com">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://f1recap.pages.dev/archive-2025.html">
+    <link rel="canonical" href="https://f1recap.pages.dev/archive-2025">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/styles.css">
@@ -105,7 +105,7 @@
             <div class="hero-card">
                 <div class="hero-meta">
                     <p class="hero-kicker">2025 Season Archive</p>
-                    <h2 class="hero-title">Complete Season Highlights</h2>
+                    <h1 class="hero-title">Complete Season Highlights</h1>
                     <p class="hero-date">All 24 Grand Prix with session videos</p>
                     <p class="hero-sessions">Browse by date • Watch highlights • Full season archive</p>
                 </div>
