--- a/public/disclosure.html
+++ b/public/disclosure.html
@@ -19,7 +19,7 @@
   <meta name="theme-color" content="#e10600">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://f1recap.pages.dev/disclosure.html">
+  <link rel="canonical" href="https://f1recap.pages.dev/disclosure">
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="assets/styles.css">
@@ -57,7 +57,7 @@
       <div class="hero-card upcoming-card">
         <div class="hero-meta">
           <p class="hero-kicker">Disclosure</p>
-          <h2 class="hero-title">We don’t host videos, we link to them</h2>
+          <h1 class="hero-title">We don't host videos, we link to them</h1>
           <p class="hero-date">All highlights are hosted on YouTube by the official Formula 1 channel. We simply organize links for faster access.</p>
           <p class="hero-sessions">If a video is removed or blocked in your region, it will disappear from our feed on the next refresh.</p>
           <p class="hero-sessions">Licensing note: embedding is disabled on F1’s uploads, so we direct you to YouTube.</p>
