--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>2026 F1 Calendar & Schedule | F1 Highlights Hub</title>
     <meta name="title" content="2026 F1 Calendar & Schedule | F1 Highlights Hub">
-    <meta name="description" content="See the full 2026 Formula 1 calendar with practice, qualifying, sprint, and race times in your timezone. Countdown to the next session and download the 2026 .ics.">
+    <meta name="description" content="Full 2026 Formula 1 calendar with practice, qualifying, sprint & race times in your timezone. Countdown to the next session.">
     <meta name="keywords" content="F1 2026 calendar, Formula 1 2026 schedule, F1 race times 2026, F1 sprint schedule 2026">
     <meta name="author" content="F1 Recap">
     <meta name="robots" content="index, follow">
@@ -111,6 +111,7 @@
     <div id="site-header"></div>
 
     <main id="top">
+        <h1 class="visually-hidden">2026 F1 Calendar & Schedule</h1>
         <!-- Hero: Next Session Countdown -->
         <section id="hero" class="hero" aria-live="polite"></section>
 
