--- a/public/calendar-2025.html
+++ b/public/calendar-2025.html
@@ -41,7 +41,7 @@
     <link rel="dns-prefetch" href="https://eu.i.posthog.com">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://f1recap.pages.dev/calendar-2025.html">
+    <link rel="canonical" href="https://f1recap.pages.dev/calendar-2025">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/styles.css">
