fix(ui): improve accessibility motion and dialog behavior

--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -100,7 +100,7 @@
 <body>
     <div id="site-header"></div>
 
-    <main>
+    <main id="main-content">
         <section class="hero" aria-live="polite">
             <div class="hero-card">
                 <div class="hero-meta">
@@ -123,7 +123,7 @@
 
         <div id="calendarLoading" class="calendar-loading">
             <div class="calendar-loading-spinner"></div>
-            <p>Loading 2025 archive...</p>
+            <p>Loading 2025 archive…</p>
         </div>
         
         <div id="calendarError" class="calendar-error" style="display: none;">
