--- a/public/disclosure.html
+++ b/public/disclosure.html
@@ -52,7 +52,7 @@
 <body>
   <div id="site-header"></div>
 
-  <main>
+  <main id="main-content">
     <section class="hero" aria-live="polite">
       <div class="hero-card upcoming-card">
         <div class="hero-meta">
