--- a/public/about.html
+++ b/public/about.html
@@ -90,7 +90,7 @@
 <body>
   <div id="site-header"></div>
 
-  <main>
+  <main id="main-content">
     <section class="hero" aria-live="polite">
       <div class="hero-card">
         <div class="hero-meta">
