feat: add standalone standings page and harden standings pipeline

--- a/public/archive-2025.html
+++ b/public/archive-2025.html
@@ -100,7 +100,7 @@
 <body>
     <div id="site-header"></div>
 
-    <main id="main-content">
+    <main id="main-content" tabindex="-1">
         <section class="hero" aria-live="polite">
             <div class="hero-card">
                 <div class="hero-meta">
