--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
 <body>
     <div id="site-header"></div>
 
-    <main id="main-content">
+    <main id="main-content" tabindex="-1">
         <h1 class="visually-hidden">2026 F1 Calendar & Schedule</h1>
         <!-- Hero: Next Session Countdown -->
         <section id="hero" class="hero" aria-live="polite"></section>
