fix(ui): improve accessibility semantics and frontend loading

--- a/public/disclosure.html
+++ b/public/disclosure.html
@@ -22,6 +22,10 @@
   <link rel="canonical" href="https://f1recap.pages.dev/disclosure">
   
   <!-- Stylesheet -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Manrope:wght@500;600;700&display=swap">
   <link rel="stylesheet" href="assets/styles.css">
   
   <!-- Structured Data -->
@@ -53,7 +57,7 @@
   <div id="site-header"></div>
 
   <main id="main-content" tabindex="-1">
-    <section class="hero" aria-live="polite">
+    <section class="hero">
       <div class="hero-card upcoming-card">
         <div class="hero-meta">
           <p class="hero-kicker">Disclosure</p>
@@ -70,6 +74,5 @@
 
   <script src="assets/js/components.js"></script>
   <script>Components.render('disclosure');</script>
-  <script src="assets/js/script.js"></script>
 </body>
 </html>
