--- a/public/standings.html
+++ b/public/standings.html
@@ -31,6 +31,10 @@
   <meta name="theme-color" content="#e10600">
   <link rel="canonical" href="https://f1recap.pages.dev/standings">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Manrope:wght@500;600;700&display=swap">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 
@@ -39,7 +43,7 @@
 
   <main id="main-content" tabindex="-1">
     <div class="standings-page-shell">
-      <section class="hero standings-hero" aria-live="polite">
+      <section class="hero standings-hero">
         <div class="hero-card hero-centered">
           <div class="hero-flag">🏆</div>
           <div class="hero-meta">
@@ -50,7 +54,7 @@
         </div>
       </section>
 
-      <section id="championshipStandings" class="standings-section standings-page-section" aria-live="polite" style="display: none;">
+      <section id="championshipStandings" class="standings-section standings-page-section" style="display: none;">
         <div class="standings-header">
           <h2 class="standings-title">
             <span class="standings-icon">🏆</span>
